<resources>
    <string name="app_name">Currency Converter</string>
    <string name="moneda_button">euro</string>
    <string name="button_moneda2">dollar</string>
    <string name="text_info">equal to</string>
    <string name="button_convert">CONVERT</string>
    <string name="text_view">valor2</string>
    <string name="text_comission">commission</string>
    <string name="text_swap">swap</string>
    <string name="inverse_button">inverse button</string>
    <string name="canvi_info">set your change ratio</string>
</resources>
