<?xml version="1.0" encoding="utf-8"?>

<layout  xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto" >

    <android.support.constraint.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
        <EditText
                android:layout_width="157dp"
                android:layout_height="42dp"
                android:ems="10"
                android:id="@+id/text_valor"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.181"
                android:inputType="number|numberDecimal" android:textSize="20sp"
                android:fontFamily="@font/roboto" app:layout_constraintBaseline_toBaselineOf="@+id/button_moneda"
                app:layout_constraintEnd_toStartOf="@+id/button_moneda" android:hint="1"
                android:textAlignment="center" android:textColor="@android:color/black"/>
        <Button
                android:text="@string/moneda_button"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:id="@+id/button_moneda" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textSize="20sp" android:fontFamily="@font/roboto"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.119" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.911"/>
        <Button
                android:text="@string/button_moneda2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_moneda2"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button_moneda"
                app:layout_constraintVertical_bias="0.372"
                android:textSize="20sp" android:fontFamily="@font/roboto" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.911"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_info" android:text="@string/text_info"
                android:textSize="20sp" android:fontFamily="@font/roboto" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/text_valor" app:layout_constraintHorizontal_bias="0.074"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.283"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_convertir"
                android:text="@string/button_convert" android:fontFamily="@font/roboto" android:textSize="24sp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.906" app:layout_constraintHorizontal_bias="0.507"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_rotate"
                android:id="@+id/inverse_button"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="44dp"
                android:contentDescription="@string/inverse_button" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.316"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.887"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textValor2" app:layout_constraintEnd_toStartOf="@+id/button_moneda2"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.701"
                android:textSize="20sp" android:fontFamily="@font/roboto"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_moneda2"
                android:textColor="@android:color/black"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/comission_info" android:text="@string/text_comission"
                android:fontFamily="@font/roboto" android:textSize="20sp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.084"
                app:layout_constraintVertical_bias="0.251"/>
        <EditText
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/text_commission"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.319" android:inputType="number|numberDecimal" android:hint="%"
                android:textAlignment="center" android:textSize="20sp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.103"/>
    </android.support.constraint.ConstraintLayout>

</layout>